crates/biome_html_parser/tests/html_specs/ok/svelte/directives/out_basic.svelte
<div out:fade>Fades out</div>
