crates/biome_html_parser/tests/html_specs/error/svelte/directives/out_invalid_params.svelte
<div out:fade={{ duration: >Incomplete</div>
